A few updates so that it builds an importable component(?)

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "React Component to display a classic grid-based logic puzzle",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack build --mode=production"
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
