--- a/package.json
+++ b/package.json
@@ -1,26 +1,9 @@
 {
   "name": "react-logic",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "React Component to display a classic grid-based logic puzzle",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack build --mode=production"
-  },
-  "author": "",
+  "main": "src/index.js",
+  "author": "antishow",
   "license": "ISC",
-  "type": "module",
-  "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "core-js": "^3.35.0",
-    "css-loader": "^6.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  }
+  "type": "module"
 }
